Worked on since last commit: 		- Incorporated ThemeService based dark-mode/light-mode functionality in app.component, specifically for background colors. This change allows the background color to switch between dark and light modes based on user preference. 		- Refactored dark-mode background styling in layout.component by delegating this responsibility to the app.component. This simplifies the component-specific styles and centralizes control of dark mode. 		- Applied minimum height styling to the app-container to ensure that the content always occupies at least the full viewport height. 		- Explored and planned further enhancements for a consistent dark mode experience across the application.

--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -3,7 +3,7 @@
     align-items:center;
     justify-content: center;
     transition: opacity 0.5s ease-in-out, background-color 0.5s ease, color 0.5s ease;
-    background-color:#f5f5f5;
+    // background-color:#f5f5f5;
 }
 .container {
     display: flex;
@@ -12,7 +12,7 @@
     align-items: center;
     width: 810px;
     transition: background-color 0.5s ease; // removed color and opacity transitions as they were redundant.
-    background-color:#f5f5f5;
+    // background-color:#f5f5f5;
     max-width: 810px;
     padding-right:20px;
     padding-left: 20px;
@@ -70,7 +70,7 @@
     font-family: "Source Sans Pro", sans-serif;
     font-weight: 349;
     overflow:hidden;
-    background-color:#f5f5f5;
+    // background-color:#f5f5f5;
     &.collapsed {
         width: calc(100% - 2.4rem); //making sure the sidebar doesn't overlap the toggle button, toggle button width is 2.4
         opacity: 1;
@@ -127,7 +127,7 @@
 
 .arrow-container{
     // position: absolute; //omitted to maintian better responsivity + easier implementation of arrow's open position.
-    background-color:#f5f5f5;
+    // background-color:#f5f5f5;
     height: 60px;
     width: 2.4rem;
     transition: opacity 0.5s ease-in-out, background-color 0.5s ease, color 0.5s ease;
@@ -153,9 +153,9 @@
 //     position:fixed;
 // }
 
-.dark-mode {
-    background-color: #333;
-}
+// .dark-mode {
+//     background-color: #333;
+// }
 
 .dark-mode a {
     color: #f5f5f5;
